Fix time marker aligning.

--- a/frontend/src/components/TimeScale/TimeScale.module.scss
+++ b/frontend/src/components/TimeScale/TimeScale.module.scss
@@ -6,8 +6,9 @@
     overflow-x: auto;
     white-space: nowrap;
     margin-bottom: 10px; // Optional: Add some spacing between rows
+    height: 25px;
   }
-
+  
   .time-unit {
     border: 1px solid #ccc;
     padding: 4px;
